# sherlock

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile
deploy/helm/sherlock/: Chart.yaml  values.yaml
deploy/helm/sherlock/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  secret.yaml  service.yaml
examples/: alertmanager-payload.json  demo.py
src/sherlock/: __init__.py  budget.py  classify.py  cli.py  config.py  models.py  orchestrator.py  redaction.py  runtime.py  trace.py
src/sherlock/clients/: __init__.py  git_client.py  kubernetes_client.py  prometheus_client.py
src/sherlock/delivery/: __init__.py  slack.py
src/sherlock/intake/: __init__.py  parsers.py  webhook.py
src/sherlock/investigators/: __init__.py  base.py  change_investigator.py  kubernetes_investigator.py  metrics_investigator.py
src/sherlock/llm/: __init__.py  anthropic_client.py  base.py  fake.py  groq_client.py
tests/: fakes.py  test_budget.py  test_build_llm.py  test_classify.py  test_cli.py  test_fake_llm.py  test_groq.py  test_investigators.py  test_orchestrator.py  test_parsers.py  test_redaction.py  test_webhook.py
