[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock-sre"
version = "0.1.0"
description = "Open-source AI agent that root-causes Kubernetes incidents — across pod state, events, metrics, and the deploy that caused it — and posts a cited root cause to Slack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sherlock contributors" }]
keywords = ["kubernetes", "sre", "incident-response", "aiops", "observability", "llm", "anthropic", "claude"]

dependencies = [
    "pydantic>=2.5",
    "groq>=0.11",
    "anthropic>=0.40",
    "kubernetes>=29.0",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
sherlock = "sherlock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
